New draw-style for audio-sequence causes problem #46189

Closed
opened 2015-09-21 05:13:25 +02:00 by Leon Cheung · 20 comments
Member

Currently, the waveform displayed on audio sequence/strip is a hollow black outline, while the text displayed on the same strip is also black, which makes it less identifiable. Maybe we can improve the style design?

2.75:
text on waves.jpg

2.4x:
SoundEdit in 2.4x.png

Currently, the waveform displayed on audio sequence/strip is a hollow black outline, while the text displayed on the same strip is also black, which makes it less identifiable. Maybe we can improve the style design? 2.75: ![text on waves.jpg](https://archive.blender.org/developer/F236218/text_on_waves.jpg) 2.4x: ![SoundEdit in 2.4x.png](https://archive.blender.org/developer/F236220/SoundEdit_in_2.4x.png)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @ZhangYu

Added subscriber: @ZhangYu
Antonis Ryakiotakis was assigned by Campbell Barton 2015-09-21 05:14:59 +02:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Also prefer previous draw-type which didn't have the conflict with text.

Filled draw-style also is easier to see when volume is mostly loud or mostly quiet.

Also prefer previous draw-type which didn't have the conflict with text. Filled draw-style also is easier to see when volume is mostly loud or mostly quiet.
Campbell Barton changed title from Improve Drawing Style for Audio Sequence to New draw-style for audio-sequence causes problem 2015-09-21 05:39:46 +02:00

Added subscriber: @JonathanWilliamson

Added subscriber: @JonathanWilliamson

Agreed on the filled draw-style @campbellbarton. I also find it more aesthetically pleasing.

Agreed on the filled draw-style @campbellbarton. I also find it more aesthetically pleasing.
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

Filled is much better more like what you would expect +1 from me

Filled is much better more like what you would expect +1 from me

Added subscriber: @AdamPreisler

Added subscriber: @AdamPreisler

Couldn't it be made user-customizable through User Preferences under Themes?

Couldn't it be made user-customizable through User Preferences under Themes?

This issue was referenced by 6562e4ebe9

This issue was referenced by 6562e4ebe9ddf8e3d08a394fd52f5d6adce0b8fd

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

I am getting white on white now. shouldn't it be white waveform and black text?

I am getting white on white now. shouldn't it be white waveform and black text?

Just a matter of themefying it I guess, I will commit this separately.

Just a matter of themefying it I guess, I will commit this separately.

We could auto-contrast too, not really a fan of adding too many theme options, we have a lot already.

We could auto-contrast too, not really a fan of adding too many theme options, we have a lot already.
Member

@ideasman42 Julian hopes to fix this #45352

@ideasman42 Julian hopes to fix this #45352

@ideasman42 It would be great for people who create themes though. And from what I've seen of the internet's Blender video-tutorial wealth people have custom theme quite often so I guess it's a used feature.

@ideasman42 It would be great for people who create themes though. And from what I've seen of the internet's Blender video-tutorial wealth people have custom theme quite often so I guess it's a used feature.
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

I agree with @ideasman42, waveform drawing color isn't worth a theme option IMO. Auto-contrast sounds like a sufficient alternative. Remember, we already have much too much theme settings .

I agree with @ideasman42, waveform drawing color isn't worth a theme option IMO. Auto-contrast sounds like a sufficient alternative. Remember, [we already have much too much theme settings ](https://twitter.com/Severin_b3d/status/616371933333073921).

@JulianEisel

Julian Eisel quote: Each of the 17 editors has the same 17 standard color settings, a total of 289 - it could be 17!

Themes extension that is now turned on by default: http://wiki.blender.org/index.php/Extensions:2.6/Py/Scripts/System/Theme_manager

I think the problem is with all the same settings like "Header" etc not something as unique as waveform color.

Merging color settings for the Editors together would be great. Especially if the option to fine-tune these 17 options for specific Editors (if checked) still existed. Would be great if only specific needed color settings could be enabled (background-color useful 'only' for teaching for example).

Just take a look at how many themes have been created for Blender even though it's so hard. Now they are even in Blender by default and not only in Graphicall builds. I haven't used the default theme for a long time. While I see the reason to merge similiar theme settings together, I don't see a reason to disable theming of this.

Someone might just want to have 70% grey setting for text while unselected and 100% white text while selected. That would actually remove the problem with overlying black text over the waveform altogether. I have no idea how hard is it to make things theme-able though, so if it's too hard, just deal with whatever more important stuff.

One of many things I totally love in Blender over other software is customization and it isn't that long since this is possible: http://wiki.blender.org/index.php/File:Figure_PO.07.png

Adobe Illustrator doesn't even let you change how you zoom or pan. Their default is Alt + Roller to zoom and Space + LMB to pan.
That is plain stupid by the way since when you type anthing, Space is occupado and you have to pan with Alt+LMB.

@JulianEisel `Julian Eisel quote: Each of the 17 editors has the same 17 standard color settings, a total of 289 - it could be 17!` Themes extension that is now turned on by default: http://wiki.blender.org/index.php/Extensions:2.6/Py/Scripts/System/Theme_manager I think the problem is with all the same settings like "Header" etc not something as unique as waveform color. Merging color settings for the Editors together would be great. Especially if the option to fine-tune these 17 options for specific Editors (if checked) still existed. Would be great if only specific needed color settings could be enabled (background-color useful 'only' for teaching for example). Just take a look at how many themes have been created for Blender even though it's so hard. Now they are even in Blender by default and not only in Graphicall builds. I haven't used the default theme for a long time. While I see the reason to merge similiar theme settings together, I don't see a reason to disable theming of this. Someone might just want to have 70% grey setting for text while unselected and 100% white text while selected. That would actually remove the problem with overlying black text over the waveform altogether. I have no idea how hard is it to make things theme-able though, so if it's too hard, just deal with whatever more important stuff. One of many things I totally love in Blender over other software is customization and it isn't that long since this is possible: http://wiki.blender.org/index.php/File:Figure_PO.07.png Adobe Illustrator doesn't even let you change how you zoom or pan. Their default is `Alt + Roller` to zoom and `Space + LMB` to pan. That is plain stupid by the way since when you type anthing, `Space` is occupado and you have to pan with `Alt+LMB`.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46189
No description provided.